# DissensionFramework

./: .gitignore  CMakeLists.txt
cmake/: DissensionFrameworkConfig.cmake.in
headers/DissensionFramework/: color.hpp  config.hpp.in  game.hpp  game_object.hpp  opengl_includes.hpp  opengl_renderer.hpp  polygon.hpp  renderer.hpp  resource.hpp  shader.hpp  shaders.hpp  signal.hpp  state.hpp  transform.hpp  vertex_array.hpp  vertex_array_builder.hpp  vertex_arrays.hpp  vertex_builder.hpp  world_object.hpp
res/shaders/: 2d_color.fs  color_2d.fs  color_2d.vs  simple_2d.vs  white_2d.vs
src/: game.cpp  game_object.cpp  opengl_renderer.cpp  polygon.cpp  resource.cpp  shader.cpp  shaders.cpp  signal.cpp  transform.cpp  vertex_array.cpp  vertex_array_builder.cpp  vertex_arrays.cpp  vertex_builder.cpp  world_object.cpp
